--- a/homepage.html
+++ b/homepage.html
@@ -1,18 +1,18 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<link rel="stylesheet" href="../css/homepage.css"/>
+<link rel="stylesheet" href="css/homepage.css"/>
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="header">
     <div class="row">
         <div class="col-md-4">
-            <img src="../img/Asana2.PNG"/>
+            <img src="img/Asana2.PNG"/>
         </div>
         <div class="col-md-4" id="col-md-4">
-            <a href="homeicon.html">HOME</a>
-            <a href="producticon.html">PRODUCT</a>
-            <a href="customericon.html">CUSTOMERS</a>
+            <a href="docs/homeicon.html">HOME</a>
+            <a href="docs/producticon.html">PRODUCT</a>
+            <a href="docs/customericon.html">CUSTOMERS</a>
             
                 <!-- <button type="button" class="btn btn-outline-primary""sign">Sign in</button> -->
               
