--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="text" placeholder='Username' class="input" /><br>
             <label><span class="glyphicon glyphicon-lock"></span></label>
             <input type="password" placeholder="password" class="input" /><br>
-            <button type="submit" class="button"><a href="firstpage.html" target="blank">Sign in</a> </button>
+            <button type="submit" class="button"><a href="docs/firstpage.html" target="blank">Sign in</a> </button>
         </form>
         
     </div>    
